@@ -1,3 +1,9 @@
+2017-06-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c,
+	  src/stm8/peeph.def:
+	  More efficient comparisons.
+
 2017-06-14 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-2621.c:
